[project]
name = "ryax-engine"
version = "26.01.0"
description = "Ryax Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi",
    "charset-normalizer",
    "gitdb",
    "gitpython",
    "idna",
    "python-gitlab",
    "pyyaml",
    "requests-toolbelt",
    "requests",
    "smmap",
    "urllib3",
    "mkdocs-material>=9.7.1",
    "mkdocs-autorefs>=1.4.3",
]
